--- a/index.html
+++ b/index.html
@@ -9,13 +9,15 @@
     <script src="https://unpkg.com/react@16/umd/react.development.js" crossorigin></script>
     <script src="https://unpkg.com/react-dom@16/umd/react-dom.development.js" crossorigin></script>
     <script src="https://unpkg.com/@babel/standalone/babel.min.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/node-uuid/1.4.8/uuid.min.js"></script>
 </head>
 <style>
     .App {
         font-family: sans-serif;
     }
 
-    .TimeBoxEditor {
+    .TimeBoxEditor,
+    .TimeBoxCreator {
         display: flex;
         flex-direction: column;
         align-items: center;
@@ -38,6 +40,14 @@
     }
 
     .TimeBox {
+        border: 1px solid gray;
+        border-radius: 5px;
+        padding: 10px;
+        margin-bottom: 10px;
+        text-align: left;
+    }
+
+    .CurrentTimeBox {
         border: 1px solid gray;
         border-radius: 5px;
         padding: 20px;
@@ -73,7 +83,6 @@
 
 <body>
     <div class="App">
-
     </div>
     <div id="root"></div>
 </body>
@@ -118,23 +127,170 @@
         )
     }
 
-    function TimeBoxEditor() {
-        return (
-            <div className="TimeBoxEditor">
-                <label>Co robisz?
-                    <input value="Ucze sie skrótw klawiszowych" type="text" />
-                </label>
-                <br />
-                <label>Ile minut?
-                    <input value="25" type="text" />
-                </label>
-                <br />
-                <button>Zacznij</button>
-            </div>
-        )
+    class TimeBoxEditor extends React.Component {
+        render() {
+            const { title, totalTimeInMinutes, onTitleChange, onTotalTimeMinuteChange, onConfirm, isEditable } = this.props;
+            return (
+                <div className={`TimeBoxEditor ${isEditable ? "" : "inactive"}`}>
+                    <label>
+                        Co robisz?
+                        <input
+                            value={title}
+                            disabled={!isEditable}
+                            onChange={onTitleChange}
+                            type="text" />
+                    </label>
+                    <br />
+                    <label>Ile minut?
+                        <input
+                            value={totalTimeInMinutes}
+                            disabled={!isEditable}
+                            onChange={onTotalTimeMinuteChange}
+                            type="text" />
+                    </label>
+                    <br />
+                    <button
+                        disabled={!isEditable}
+                        onClick={onConfirm}
+                    >Zatwierdź zmiany</button>
+                </div>
+            )
+        }
     }
 
-    class TimeBox extends React.Component {
+    class TimeBoxCreator extends React.Component {
+
+        constructor(props) {
+            super(props);
+            this.titleInput = React.createRef();
+            this.totalTimeInMinutesInput = React.createRef();
+            this.form = React.createRef();
+        }
+
+        // Controled Component
+        // state = {
+        //     title: "",
+        //     totalTimeInMinutes: 0,
+        // };
+
+        // handleTitleChange = (event) => {
+        //     this.setState({ title: event.target.value });
+        // };
+
+        // handleTotalTimeChange = (event) => {
+        //     this.setState({ totalTimeInMinutes: event.target.value });
+        // };
+
+        // handleSubmit = (event) => {
+        //     const { title, totalTimeInMinutes } = this.state;
+        //     event.preventDefault();
+        //     this.props.onCreate({ id: uuid.v4(), title, totalTimeInMinutes });
+        //     this.setState({ title: "", totalTimeInMinutes: 0 })
+        // };
+
+
+        // Not controlled way
+        handleSubmit = (event) => {
+            const { title, totalTimeInMinutes } = this.form.current.elements;
+            event.preventDefault();
+            this.props.onCreate({
+                id: uuid.v4(),
+                title: title.value,
+                totalTimeInMinutes: totalTimeInMinutes.value,
+            });
+            title.value = "";
+            totalTimeInMinutes.value = "";
+        };
+
+        render() {
+            return (
+                <form ref={this.form} onSubmit={this.handleSubmit} className={`TimeBoxCreator`}>
+                    <label>
+                        Co robisz?
+                            <input
+                            id="title"
+                            ref={this.titleInput}
+                            type="text" />
+                    </label>
+                    <br />
+                    <label>Ile minut?
+                            <input
+                            id="totalTimeInMinutes"
+                            ref={this.totalTimeInMinutesInput}
+                            type="number" />
+                    </label>
+                    <br />
+                    <button>Dodaj timebox</button>
+                </form>
+            )
+        }
+    }
+
+    class TimeBoxList extends React.Component {
+
+        state = {
+            timeboxes: [
+                { id: uuid.v4(), title: 'test', totalTimeInMinutes: 10 },
+                { id: uuid.v4(), title: 'test2', totalTimeInMinutes: 5 },
+                { id: uuid.v4(), title: 'test3', totalTimeInMinutes: 1 },
+            ]
+        }
+
+        addTimeBox = (timeBox) => {
+            this.setState(prevState => {
+                // const timeboxes = [...prevState.timeboxes, timeBox];
+                const timeboxes = prevState.timeboxes.concat([timeBox]);
+                return { timeboxes };
+            })
+        }
+
+        removeTimeBox = (indexOfTimeBox) => {
+            this.setState(prevState => {
+                // const timeboxes = prevState.timeboxes.filter((timebox, index) => index !== indexOfTimeBox);
+                const timeboxes = prevState.timeboxes;
+                timeboxes.splice(indexOfTimeBox, 1);
+                return { timeboxes };
+            })
+        }
+
+        updateTiemBox = (updatedTiemBox) => {
+            this.setState(prevState => {
+                const timeboxes = prevState.timeboxes.map((timebox) => {
+                    return timebox.id === updatedTiemBox.id ? updatedTiemBox : timebox;
+                });
+                return { timeboxes };
+            })
+        }
+
+        handleCreate = (timeBoxCreated) => {
+            this.addTimeBox(timeBoxCreated)
+        }
+
+
+
+        render() {
+            const { timeboxes } = this.state;
+            return (
+                <>
+                    <TimeBoxCreator onCreate={this.handleCreate} />
+                    {timeboxes.map((timeBox, index) =>
+                        (<TimeBox
+                            onDelete={() => this.removeTimeBox(index)}
+                            onEdit={this.updateTiemBox}
+                            key={timeBox.id}
+                            id={timeBox.id}
+                            title={timeBox.title}
+                            totalTimeInMinutes={timeBox.totalTimeInMinutes} />
+                        )
+                    )}
+
+
+                </>
+            )
+        };
+    }
+
+    class CurrentTimeBox extends React.Component {
 
         constructor(props) {
             super(props);
@@ -144,7 +300,7 @@
                 pasueCount: 0,
                 elapsedTimeInSeconds: 0
             }
-            this.handleStop = this.handleStop.bind(this)
+            this.handleStop = this.handleStop.bind(this);
         }
 
         handleStart(event) {
@@ -174,12 +330,14 @@
             this.stopTimer();
         }
 
-        handleStop(event) {
+        handleStop() {
+            this.stopTimer();
             this.setState({
                 isRunning: false,
                 isPaused: false,
-                pasueCount: 0
-            })
+                pasueCount: 0,
+                elapsedTimeInSeconds: 0
+            });
 
         }
 
@@ -193,27 +351,128 @@
             )
         }
 
+
+
         stopTimer() {
             window.clearInterval(this.intervalId);
         }
 
         render() {
             const { isRunning, isPaused, pasueCount, elapsedTimeInSeconds } = this.state;
-            const totalTimeInSeconds = 25;
+            const { title, totalTimeInMinutes, isEditable, onEdit } = this.props;
+            const totalTimeInSeconds = totalTimeInMinutes * 60;
             const timeLeftInSeconds = totalTimeInSeconds - elapsedTimeInSeconds;
             const minutes = Math.floor(timeLeftInSeconds / 60);
             const seconds = Math.floor(timeLeftInSeconds % 60);
             const progressInPercent = elapsedTimeInSeconds / totalTimeInSeconds * 100;
 
+            if (timeLeftInSeconds < 0) {
+                this.handleStop();
+            }
+
+
+
+
+
+
             return (
-                <div className="TimeBox">
-                    <h1>Ucze sie skrotwo klawiszowych</h1>
+                <div className={`TimeBox ${isEditable ? "inactive" : ""}`}>
+                    <h1>{title}</h1>
                     <Clock seconds={seconds} minutes={minutes} className={isPaused ? 'inactive' : ''} />
                     <ProgressBar percent={progressInPercent} className={isPaused ? 'inactive' : ''} />
+                    <button onClick={onEdit} disabled={isEditable} >Edytuj</button>
                     <button onClick={() => this.handleStart()} disabled={isRunning} >Start</button>
                     <button onClick={this.handleStop} disabled={!isRunning}>Stop</button>
                     <button onClick={() => this.togglePause()} disabled={!isRunning}>{(isPaused) ? 'Wznów' : 'Pauza'}</button>
                     liczba przerw: {pasueCount}
+                </div>
+            )
+        }
+    }
+
+
+    class EditableTimeBox extends React.Component {
+
+        state = {
+            title: "Ucze się Reacta",
+            isEditable: true,
+            totalTimeInMinutes: 15
+        }
+
+        handleConfirm = () => {
+            this.setState({ isEditable: false })
+        }
+
+        handleTitleChange = (event) => {
+            this.setState({ title: event.target.value })
+        }
+
+        handleTotalTimeMinutesChange = (event) => {
+            this.setState({ totalTimeInMinutes: event.target.value })
+        }
+
+        handleEdit = () => {
+            this.setState({ isEditable: true })
+        }
+
+        render() {
+            const { title, totalTimeInMinutes, isEditable } = this.state;
+            return (
+                <>
+                    <TimeBoxEditor
+                        title={title}
+                        isEditable={isEditable}
+                        totalTimeInMinutes={totalTimeInMinutes}
+                        onConfirm={this.handleConfirm}
+                        onTitleChange={this.handleTitleChange}
+                        onTotalTimeMinuteChange={this.handleTotalTimeMinutesChange} />
+                    <CurrentTimeBox
+                        title={title}
+                        isEditable={isEditable}
+                        onEdit={this.handleEdit}
+                        totalTimeInMinutes={totalTimeInMinutes}
+                    />
+                </>
+            )
+        }
+    }
+
+    class TimeBox extends React.Component {
+
+        state = {
+            isEditable: false,
+        };
+
+        handleEditableChange = () => {
+            this.setState(prevState => ({ isEditable: !prevState.isEditable }))
+        }
+
+        onTitleChange = (event) => {
+            const { onEdit, id, totalTimeInMinutes } = this.props;
+            const title = event.target.value;
+            onEdit({ title, totalTimeInMinutes, id });
+        }
+
+        onTotalTimeMinuteChange = (event) => {
+            const { onEdit, id, title } = this.props;
+            const totalTimeInMinutes = event.target.value;
+            onEdit({ title, totalTimeInMinutes, id });
+        }
+
+        render() {
+            const { title, totalTimeInMinutes, onDelete } = this.props;
+            const { isEditable } = this.state;
+            return (
+                <div className="TimeBox">
+                    {isEditable
+                        ? (<>
+                            <input onChange={this.onTitleChange} value={title} type="text" />
+                            <input onChange={this.onTotalTimeMinuteChange} value={totalTimeInMinutes} type="number" />
+                        </>)
+                        :
+                        <h3>{title}-{totalTimeInMinutes}</h3>}
+                    <button onClick={onDelete}>Usuń</button>
+                    <button onClick={this.handleEditableChange}> {isEditable ? 'Zatwierdź' : 'Edytuj'}</button>
                 </div>
             )
         }
@@ -224,8 +483,7 @@
             <div className="App">
                 <h1>Kurs React Tydzien 2</h1>
                 <hr />
-                <TimeBoxEditor />
-                <TimeBox />
+                <TimeBoxList />
             </div>
         )
     }
